--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -36,3 +36,25 @@
     transform: rotate(360deg);
   }
 }
+
+label{
+  display:block;
+}
+#weight {
+  padding-right:24px;
+  text-align:right;
+  -moz-appearance:textfield;
+  /* direction: rtl;*/
+}
+#weight::-webkit-inner-spin-button, 
+#weight::-webkit-outer-spin-button { 
+  -webkit-appearance: none;
+}
+#weight+span::after {
+  content: 'kg';
+  width: 22px;
+  height: 22px;
+  display: inline-block;
+  position: relative;
+  right:22px;
+}
